--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./condicionales.js">
+  <script src="./objetos.js">
   </script>
 </body>
 </html>
