--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="author" content="Maria Camila">
+  <meta name="description" content="Simulador de préstamos">
+  <title>simulador de prestamos</title>
 </head>
+
 <body>
-  <script src="./objetos.js">
+  <script src="./js/simulador.js">
   </script>
 </body>
+
 </html>
