--- a/index.html
+++ b/index.html
@@ -6,13 +6,86 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Maria Camila">
-  <meta name="description" content="Simulador de préstamos">
-  <title>simulador de prestamos</title>
+  <meta name="description" content="pizzeria">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./asset/css/main.css">
+  <script src="https://kit.fontawesome.com/0295209784.js" crossorigin="anonymous"></script>
+  <title>OBRADOR</title>
 </head>
 
 <body>
-  <script src="./js/simulador.js">
-  </script>
+  <header class="container-fluid">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light">
+      <img src="./asset/img/image 2.png" alt="">
+      <div class="container-fluid" class="nav-div">
+        <a class="navbar-brand" href="./index.html">
+          <h1 class="header_titulo">OBRADOR</h1>
+        </a>
+        <div class="collapse navbar-collapse nav_div--menu" id="navbarToggler">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="./asset/paginas/login.html">
+                <button class="boton_style" class="navbar-toggler">
+                  <span class="hover-underline"> iniciar seccion </span>
+                  <svg id="arrow-horizontal" xmlns="http://www.w3.org/2000/svg" width="30" height="10"
+                    viewBox="0 0 46 16">
+                    <path id="Path_10" data-name="Path 10"
+                      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
+                      transform="translate(30)"></path>
+                  </svg>
+                </button>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <main class="container-fluid main">
+    <section class="row main_section--index">
+      <div>
+        <img src="./asset/img/image 1.jpg" class="img-section" alt="" width="20%">
+      </div>
+      <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, magnam! Sit
+          autem officiis hic labore velit, dolorum sunt voluptate, excepturi ipsam deserunt vitae assumenda ea.
+          Autem dicta minus ducimus architecto quis? Obcaecati rem eius a repudiandae quod sit veniam, voluptate id amet
+          magni vel, tempora
+          reiciendis iusto expedita, sunt doloremque rerum consequatur cum delectus natus perspiciatis quo necessitatibus
+          laudantium. At distinctio
+          reprehenderit cum, laudantium, modi, perferendis harum magnam cupiditate impedit adipisci perspiciatis in illo
+          expedita error aspernatur dolores
+          inventore mollitia a rem? Voluptatibus temporibus fugit ex labore, itaque et officiis!
+        </p>
+      </div>
+    </section>
+  </main>
+
+  <!--<footer>
+    <div class="row justify-content-between">
+      <h3 class="col-xs-12 col-md-2 text-center">Marylipstick</h3>
+      <div class="col-xs-12 col-md-2 text-center mt-4 mt-md-0 align-self-center">
+        <div class="row">
+          <a class="col-4 text-black" href="https://www.facebook.com/mariacamila.lopez.16752754">
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+          <a class="col-4 text-black" href="https://www.instagram.com/">
+            <i class="fa-brands fa-instagram-square"></i>
+          </a>
+          <a class="col-4 text-black" href="https://twitter.com/home">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+    </div>
+
+  </footer>-->
+
+  <!--<script src="./js/condicionales.js">
+  </script>-->
 </body>
 
 </html>
