haciendo  un ejemplo del registro de usuario

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         </a>
         <div class="collapse navbar-collapse nav_div--menu" id="navbarToggler">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li>
+              <a href="./asset/paginas/registro.html">registro</a>
+            </li>
+            <li>
+              <a href="./asset/paginas/carrito.html"> carrito</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link active" href="./asset/paginas/login.html">
                 <button class="boton_style" class="navbar-toggler">
