--- a/asset/paginas/carrito.html
+++ b/asset/paginas/carrito.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/5229224c55.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 
 <body>
     <header class="container-fluid">
         <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-            <img src="./asset/img/image 2.png" alt="">
+            <!--<img src="./asset/img/image 2.png" alt="">-->
             <div class="container-fluid" class="nav-div">
                 <a class="navbar-brand" href="./index.html">
                     <h1 class="header_titulo">OBRADOR</h1>
@@ -36,11 +37,13 @@
             </div>
         </nav>
     </header>
-
     <aside>
-        <div id="allCarrito">
-            <p>Bolsa de articulos</p>
-            <div id="articulos">
+        <div class="button-float">
+            <i class="fa-solid fa-cart-shopping"></i>
+        </div>
+        <div class="carrito" id="allCarrito">
+            <p class="asaide-titulo">Bolsa de articulos</p>
+            <div class="articulos" id="articulos">
             </div>
             <div class="footer-asaide">
                 <p>Numero de articulos:<span id="conteo">0</span></p>
@@ -49,7 +52,10 @@
             </div>
         </div>
     </aside>
-    <script src="../js/simulador.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- toastify-js -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="../js/carrito.js"></script>
 </body>
 
 </html>
