haciendo animacion para practica y integracion

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
           autem officiis hic labore velit, dolorum sunt voluptate, excepturi ipsam deserunt vitae assumenda ea.
           Autem dicta minus ducimus architecto quis? Obcaecati rem eius a repudiandae quod sit veniam, voluptate id amet
           magni vel, tempora
-          reiciendis iusto expedita, sunt doloremque rerum consequatur cum delectus natus perspiciatis quo necessitatibus
+          reiciendis iusto expedita, sunt doloremque rerum consequatur cum delectus natus perspiciatis quo
+          necessitatibus
           laudantium. At distinctio
           reprehenderit cum, laudantium, modi, perferendis harum magnam cupiditate impedit adipisci perspiciatis in illo
           expedita error aspernatur dolores
@@ -68,6 +69,12 @@
       </div>
     </section>
   </main>
+
+ <!--animacion que quiero implementar en mi proyecto esat es de prueba aplique el css directamente en el archivo no use sass-->
+
+  <div class="div_container" id="div_container">
+    <div id="caja_animacion" class="caja_animacion"></div>
+  </div>
 
   <!--<footer>
     <div class="row justify-content-between">
@@ -90,8 +97,8 @@
 
   </footer>-->
 
-  <!--<script src="./js/condicionales.js">
-  </script>-->
+  <script src="./asset/js/animacion.js">
+  </script>
 </body>
 
 </html>
