haciendo otra prube del carrito de compras

--- a/index.html
+++ b/index.html
@@ -70,12 +70,31 @@
     </section>
   </main>
 
- <!--animacion que quiero implementar en mi proyecto esat es de prueba aplique el css directamente en el archivo no use sass-->
+  <!--animacion que quiero implementar en mi proyecto esat es de prueba aplique el css directamente en el archivo no use sass-->
 
   <div class="div_container" id="div_container">
     <div id="caja_animacion" class="caja_animacion"></div>
   </div>
 
+  <!--Prueba numero dos del carro para la segunda entrega del proyecto-->
+  <!-- seccion de productos -->
+  <div class="div_carro" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+
+    <h2 class="products__title">Productos</h2>
+    <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-5" id="products-container">
+    </div>
+  </div>
+
+
+
+  <!-- secion de el carro -->
+  <div class="tab-pane fade carrito  " id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+    <div class="cart-section">
+      <div id="cart-container" class="cart-container"></div>
+    </div>
+
+  </div>
+  </div>
   <!--<footer>
     <div class="row justify-content-between">
       <h3 class="col-xs-12 col-md-2 text-center">Marylipstick</h3>
@@ -97,8 +116,10 @@
 
   </footer>-->
 
+  <script src="./js/script.js"></script>
   <script src="./asset/js/animacion.js">
   </script>
+  <script src="./asset/js/pruebaCarro2.js"></script>
 </body>
 
 </html>
