--- a/asset/paginas/registro.html
+++ b/asset/paginas/registro.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="sweetalert2.all.min.js"></script>
   <title>registro de usuario</title>
 </head>
 
@@ -33,12 +35,9 @@
         <th>correo</th>
       </tr>
     </thead>
-    <tbody><td></td></tbody>
   </table>
 
-  <script src="../js/registro.js">
-
-  </script>
+  <script src="../js/registro.js"></script>
 </body>
 
 </html>
