--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Maria Camila">
   <meta name="description" content="pizzeria">
+  <link rel="shortcut icon" href="./asset/img/image2.jpg">
+  <!--incluyendo bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <!--incluyendo css-->
   <link rel="stylesheet" href="./asset/css/main.css">
+  <!--incluyendo icono de menu hamburguesa-->
   <script src="https://kit.fontawesome.com/0295209784.js" crossorigin="anonymous"></script>
   <title>OBRADOR</title>
 </head>
@@ -17,30 +21,45 @@
 <body>
   <header class="container-fluid">
     <nav class="navbar fixed-top navbar-expand-lg navbar-light">
-      <img src="./asset/img/image 2.png" alt="">
-      <div class="container-fluid" class="nav-div">
-        <a class="navbar-brand" href="./index.html">
+      <div class="container-fluid">
+        <a class="navbar-brand"href="./index.html">
           <h1 class="header_titulo">OBRADOR</h1>
         </a>
+        <button class="navbar-toggler div_button--estilos" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse nav_div--menu" id="navbarToggler">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li>
-              <a href="./asset/paginas/registro.html">registro</a>
-            </li>
-            <li>
-              <a href="./asset/paginas/carrito.html"> carrito</a>
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0"  id="pills-tab"
+          role="tablist">
+            <li class="nav-item">
+              <a class="li_a--menu active" id="pills-home-tab"
+              data-bs-toggle="pill"
+              data-bs-target="#pills-home"
+              type="a"
+              role="tab"
+              aria-controls="pills-home"
+              aria-selected="true" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./asset/paginas/login.html">
-                <button class="boton_style" class="navbar-toggler">
-                  <span class="hover-underline"> iniciar seccion </span>
-                  <svg id="arrow-horizontal" xmlns="http://www.w3.org/2000/svg" width="30" height="10"
-                    viewBox="0 0 46 16">
-                    <path id="Path_10" data-name="Path 10"
-                      d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z"
-                      transform="translate(30)"></path>
-                  </svg>
-                </button>
+              <a class="li_a--menu" id="pills-profile-tab"
+              data-bs-toggle="pill"
+              data-bs-target="#pills-profile"
+              type="a"
+              role="tab"
+              aria-controls="pills-profile"
+              aria-selected="false" href="./asset/paginas/menu.html">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a class="li_a--menu" id="pills-contact-tab"
+              data-bs-toggle="pill"
+              data-bs-target="#pills-contact"
+              type="a"
+              role="tab"
+              aria-controls="pills-contact"
+              aria-selected="false" href="./asset/paginas/carrito.html">
+                <i class="fa-solid fa-cart-shopping"></i>
               </a>
             </li>
           </ul>
@@ -48,56 +67,61 @@
       </div>
     </nav>
   </header>
+  
 
   <main class="container-fluid main">
-    <section class="row main_section--index">
-      <div>
-        <img src="./asset/img/image 1.jpg" class="img-section" alt="" width="20%">
-      </div>
-      <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, magnam! Sit
-          autem officiis hic labore velit, dolorum sunt voluptate, excepturi ipsam deserunt vitae assumenda ea.
-          Autem dicta minus ducimus architecto quis? Obcaecati rem eius a repudiandae quod sit veniam, voluptate id amet
-          magni vel, tempora
-          reiciendis iusto expedita, sunt doloremque rerum consequatur cum delectus natus perspiciatis quo
-          necessitatibus
-          laudantium. At distinctio
-          reprehenderit cum, laudantium, modi, perferendis harum magnam cupiditate impedit adipisci perspiciatis in illo
-          expedita error aspernatur dolores
-          inventore mollitia a rem? Voluptatibus temporibus fugit ex labore, itaque et officiis!
-        </p>
+    <h2>OBRADOR cocina artesanal</h2>
+    <section class="row justify-content-around my-4 text-center section">
+      <article class="rounded-3 p-4 m-4 col-4 col-lg-2 section-article-">
+        <img src="./asset/img/pizza.JPG" class="section-article-img img-thumbnail" alt="">
+      </article>
+      <article class="rounded-3 p-4 m-4 col-4 col-lg-2 section-article">
+        <img src="./asset/img/enproceso.JPG" class="section-article-img img-thumbnail" alt="">
+      </article>
+      <article class="rounded-3 p-4 m-4 col-4 col-lg-2 section-article">
+        <img src="./asset/img/preparacion.JPG" class="section-article-img img-thumbnail" alt="">
+      </article>
+      <article class="rounded-3 p-4 m-4 col-4 col-lg-2 section-article">
+        <img src="./asset/img/amigos.JPG" class="section-article-img img-thumbnail" alt="">
+      </article>
+    </section>
+
+
+    <section class="col main_section--index">
+      <div class="main_section--index-div">
+        <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed nemo, quas amet nulla voluptate molestias
+          nostrum fugiat culpa? Autem repellendus voluptatem ex, impedit sunt est voluptate
+          minus ipsum soluta maxime officia odit dicta quam, totam nostrum explicabo consequatur cum laborum
+          necessitatibus quae labore nulla. Commodi esse quasi explicabo aliquid repellat iste unde accusantium
+          illo ut. Praesentium porro est itaque hic eaque officiis iure quisquam distinctio, enim quia in, asperiores
+          dolorum, magnam eos saepe ratione!
+          Sit ullam accusamus fugiat! Veniam mollitia porro blanditiis culpa accusamus placeat eum modi quaerat nihil
+          fugiat doloribus eius corrupti omnis non, at veritatis ea temporibus nam.
+
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci inventore quaerat dolorem quia, et quo
+          veniam repellendus nesciunt dicta corporis est aperiam rem tempora veritatis.
+          Consequuntur explicabo iusto earum cupiditate eos quos aperiam, fugit fugiat nihil. Aut quia, ipsam aliquam
+          obcaecati rerum, voluptatem enim est officia perspiciatis illum non sint, exercitationem ut?
+          Eveniet nemo assumenda iure porro dolorum veritatis pariatur similique debitis obcaecati qui! Atque corrupti
+          repellat aut! Mollitia adipisci quam,
+          hic modi obcaecati ad sequi facilis labore, nihil in amet temporibus velit dolor reprehenderit nostrum totam
+          quis quasi ullam fugiat, ratione dolore maxime recusandae corporis. Iure nemo eum officiis.
+        </span>
       </div>
     </section>
   </main>
 
-  <!--animacion que quiero implementar en mi proyecto esat es de prueba aplique el css directamente en el archivo no use sass-->
-
-  <div class="div_container" id="div_container">
-    <div id="caja_animacion" class="caja_animacion"></div>
-  </div>
-
-  <!--Prueba numero dos del carro para la segunda entrega del proyecto-->
-  <!-- seccion de productos -->
-  <div class="div_carro" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-
-    <h2 class="products__title">Productos</h2>
-    <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-5" id="products-container">
-    </div>
+  <!--parte del menu-->
+  <div class="tab-pane fade show active container" id="pills-profile" role="tabpanel"
+    aria-labelledby="pills-profile-tab">
+    <h2 class="products__title"><menu></menu></h2>
+    <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-5" id="products-container"></div>
   </div>
 
 
-
-  <!-- secion de el carro -->
-  <div class="tab-pane fade carrito  " id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
-    <div class="cart-section">
-      <div id="cart-container" class="cart-container"></div>
-    </div>
-
-  </div>
-  </div>
-  <!--<footer>
+  <footer class="container-fluid pb-4 pt-4">
     <div class="row justify-content-between">
-      <h3 class="col-xs-12 col-md-2 text-center">Marylipstick</h3>
+      <h3 class="col-xs-12 col-md-2 text-center">OBRADOR</h3>
       <div class="col-xs-12 col-md-2 text-center mt-4 mt-md-0 align-self-center">
         <div class="row">
           <a class="col-4 text-black" href="https://www.facebook.com/mariacamila.lopez.16752754">
@@ -112,15 +136,16 @@
         </div>
       </div>
     </div>
-    </div>
+  </footer>
 
-  </footer>-->
-
-  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
     crossorigin="anonymous"></script>
-  <script src="./asset/js/animacion.js">
-  </script>
-  <script src="./asset/js/pruebaCarro2.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <script src="./js/script.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
